k8s/istio/resource/service_a/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicea
spec:
  hosts:
    - "*"
  gateways:
    - servicea-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jmx-a.monitoring.svc.cluster.local
            port:
              number: 8080
